
2023-12-30: Version 2.6.5

- Fixed broken video data streams on systems without output device when switching live
  channel to a different transponder while recording (reported by Markus Ehrnsperger).
- The frame width, height, scan type and aspect ratio of a recording are now stored in
  the 'info' file under the 'F' tag (thanks to Christoph Haubrich).
- Added the function cRecordingInfo::FrameParams(), which can be used to get a nicely
  formatted string with all the available frame data.
- The recording info of the default skins now shows the frame parameters of the
  recording at the end of the description (if such information is available).

2024-01-24: Version 2.6.6

- Changed installing config files to handle potentially broken 'cp -n'.
- Fixed height calculation in progress display (thanks to Matthias Senzel).
- Fixed a possible crash in cDevice::StopSectionHandler() (thanks to Markus
  Ehrnsperger).
- Using a dummy OSD if no OSD provider is available is not considered an error any
  more (thanks to Markus Ehrnsperger).
- Implemented scaling images (thanks to Andreas Baierl).
- Removed syslog calls in child process after fork() (thanks to Markus Ehrnsperger).
- Fixed an unnecessary double display of the current menu item in page up/down
  (thanks to Matthias Senzel).
- Fixed an unnecessary double display of menu items in the Recordings menu (thanks to
  Matthias Senzel).
- Added the move constructor to cString for better performance (thanks to Markus
  Ehrnsperger).
- Added the total number of errors when logging new recording errors.
- Added '/' to the list of fuzzy characters for pattern timers.
- Fixed handling primary device on headless systems (thanks to Markus Ehrnsperger).
- Workaround in detecting frame height for channels with wrong crop parameters
  (thanks to Christoph Haubrich).
- Fixed possible duplicate component entries in the info of an ongoing recording
  (reported by Christoph Haubrich).