@@ -9886,3 +9886,8 @@ Video Disk Recorder Revision History
   (thanks to Christoph Haubrich).
 - Fixed possible duplicate component entries in the info of an ongoing recording
   (reported by Christoph Haubrich).
+
+2024-02-15:
+
+- Fixed the move assignment operator to check for self-assignment (suggested by
+  Stefan Herdler).
